# explorer

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
backend/: main.py
backend/aggregator/: workers.py
db/: create_table.sql
hoarder/: docker-compose.yaml  pyproject.toml
hoarder/code_watcher/portal/: code.py
hoarder/json_harvester/: harvester.py
