[tool.poetry]
name = "backend"
version = "0.1.0"
description = "backend for explorer project"
authors = ["p0lygun <solankivibhakar82@gmail.com>"]
license = "gplv3"
readme = "README.md"
packages = [
    {include = "backend"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
loguru = "^0.7.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[tool.poetry.scripts]
server = "backend.main:run_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
