[tool.poetry]
name = "hoarder"
version = "0.2.0"
description = "A package to scrape all Experiences from https://portal.battlefield.com/"
authors = ["p0lygun <solankivibhakar82@gmail.com>"]
license = "gplv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.0"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
